<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.activities.MainActivity">

    <item
        android:id="@+id/action_deleteDiveLog"
        android:orderInCategory="10"
        android:icon="@drawable/ic_delete_white"
        android:title="@string/action_deleteDiveLog_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_diveLogFilter"
        android:orderInCategory="120"
        android:title="@string/action_diveLogFilter_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sortMostRecentDiveFirst"
        android:orderInCategory="130"
        android:title="@string/action_sortMostRecentDiveFirst_title"/>

    <item
        android:id="@+id/action_sortMostRecentDiveLast"
        android:orderInCategory="131"
        android:title="@string/action_sortMostRecentDiveLast_title"/>

    <item
        android:id="@+id/action_switchToImperial"
        android:orderInCategory="140"
        android:title="@string/action_switchToImperial_title"/>

    <item
        android:id="@+id/action_switchToMetric"
        android:orderInCategory="141"
        android:title="@string/action_switchToMetric_title"/>

    <item
        android:id="@+id/action_use_today_for_new_dive_date"
        android:orderInCategory="150"
        android:title="@string/action_use_today_for_new_dive_date_title"/>

    <item
        android:id="@+id/action_use_last_dive_for_new_dive_date"
        android:orderInCategory="151"
        android:title="@string/action_use_last_dive_for_new_dive_date_title"/>

    <item
        android:id="@+id/action_sequenceDiveLogs"
        android:orderInCategory="160"
        android:title="@string/action_sequenceDiveLogs_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_selectReefGuide"
        android:orderInCategory="170"
        android:title="@string/action_selectReefGuide_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_refreshReefGuide"
        android:orderInCategory="172"
        android:title="@string/action_refreshReefGuide_title"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_signOut"
        android:orderInCategory="180"
        android:title="@string/action_signOut_title"
        app:showAsAction="never"/>

</menu>
