<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnStartingTankPressure"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnStartingTankPressure_hint" />

        <Button
            android:id="@+id/btnEndingTankPressure"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnEndingTankPressure_hint" />

        <Button
            android:id="@+id/btnAirUsed"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnAirUsed_hint" />

        <Button
            android:id="@+id/btnDiveTankType"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnDiveTankType_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnVisibility"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnVisibility_hint" />

        <Button
            android:id="@+id/btnAirTemperature"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnAirTemperature_hint" />

        <Button
            android:id="@+id/btnWaterTemperature"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnWaterTemperature_hint" />
    </LinearLayout>

</LinearLayout>