<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDiveType"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnDiveType" />

        <Button
            android:id="@+id/btnDiveStyle"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnDiveStyle_hint" />


        <Button
            android:id="@+id/btnDiveEntry"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnDiveEntry_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnWeatherCondition"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnWeatherCondition_hint" />

        <Button
            android:id="@+id/btnCurrentCondition"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnCurrentCondition_hint" />

        <Button
            android:id="@+id/btnSeaCondition"
            style="@style/btnDiveLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/btnSeaCondition_hint" />

    </LinearLayout>

</LinearLayout>